Finished notebook content.

--- a/adsa_workshop2_dive_into_python.ipynb
+++ b/adsa_workshop2_dive_into_python.ipynb
@@ -14,9 +14,8 @@
     "# ADSA Workshop 2 - Diving Deeper into Python\n",
     "> Workshop content adapted from\n",
     "* https://github.com/ehmatthes/intro_programming/\n",
-    "* http://nbviewer.ipython.org/github/rasbt/python_reference/blob/master/tutorials/sorting_csvs.ipynb\n",
-    "\n",
-    "***"
+    "* http://github.com/rasbt/python_reference/blob/master/tutorials/sorting_csvs.ipynb\n",
+    "* http://www.engr.ucsb.edu/~shell/che210d/numpy.pdf"
    ]
   },
   {
@@ -209,9 +208,20 @@
     "    # print() is also a function!\n",
     "    # It prints the string you give it onto the screen.\n",
     "    \n",
-    "    print(\"You are doing good work, %s!\" % name)\n",
-    "    print(\"Thank you very much for your efforts on this project.\\n\")\n",
-    "    \n",
+    "    print('You are doing good work, {0}!'.format(name))\n",
+    "    print('Thank you very much for your efforts on this project.\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# now we can use the function that we just defined\n",
+    "\n",
     "thank_you('Adriana')\n",
     "thank_you('Billy')\n",
     "thank_you('Caroline')"
@@ -228,18 +238,17 @@
     "students = ['Bernice', 'Aaron', 'Cody']\n",
     "\n",
     "# Use the sort function to put students in alphabetical order.\n",
-    "students.sort()\n",
+    "\n",
     "\n",
     "# Display the list in its current order.\n",
     "print(\"Students in alphabetical order.\")\n",
-    "for student in students:\n",
-    "    print(student.title())\n",
+    "\n",
     "\n",
     "# Give the sort function the reverse parameter\n",
     "# This puts students in reverse alphabetical order.\n",
-    "students.sort(reverse=True)\n",
     "\n",
-    "# Display the list in its current order.\n",
+    "\n",
+    "# Display the list in reverse order.\n",
     "print(\"\\nStudents in reverse alphabetical order.\")\n",
     "for student in students:\n",
     "    print(student.title())"
@@ -305,8 +314,9 @@
     "    print(\"Adding 5 to\", number, \"now...\")\n",
     "    return number + 5\n",
     "    print(\"This will not get printed\")\n",
-    "    \n",
-    "num = add_five(10)\n",
+    "\n",
+    "# Now use your function add_five()\n",
+    "num = \n",
     "print(\"New number is:\", num)"
    ]
   },
@@ -345,16 +355,16 @@
    "outputs": [],
    "source": [
     "# Create an empty dictionary.\n",
-    "pets = {}\n",
+    "pets = \n",
     "\n",
     "# Fill the dictionary, pair by pair.\n",
-    "pets['Willie'] ='dog'\n",
-    "pets['Schroedinger'] = 'cat'\n",
-    "pets['Zinga'] = 'hamster'\n",
+    "pets[]\n",
+    "pets[]\n",
+    "pets[]\n",
     "\n",
     "# Print out the items in the dictionary.\n",
     "for name, animal in pets.items():\n",
-    "    print(name, \"is a\", animal)"
+    "    print(name, 'is a', animal)"
    ]
   },
   {
@@ -372,10 +382,16 @@
    },
    "outputs": [],
    "source": [
-    "# Remove the word 'list' and its meaning.\n",
-    "del pets['Zinga']\n",
+    "del\n",
     "\n",
     "print(pets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The key-value format of the dictionary data structure is actually quite accessible. Usually, data on the internet obtained from APIs follow the JSON format and their similar structure to dictionaries allows us to easily convert between JSON data and dictionaries."
    ]
   },
   {
@@ -425,12 +441,19 @@
     "str = 'Hi! My name is Python!'\n",
     "\n",
     "# convert the string to uppercase letters\n",
-    "print(str.upper())\n",
+    "\n",
     "\n",
     "# convert all lowercase letters to uppercase and vice versa\n",
-    "print(str.swapcase())\n",
     "\n",
-    "print( \"83\".isdigit() )"
+    "\n",
+    "# check if a string is a digit(s) or not\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `math` module's functions are listed here: https://docs.python.org/2/library/math.html"
    ]
   },
   {
@@ -466,9 +489,21 @@
     "    column1_title, column2_title, column3_title\n",
     "    row1_data1, row1_data2, row1_data3\n",
     "    row2_data1, row2_data2, row2_data3\n",
-    "    row3_data1, row3_data2, row3_data3\n",
+    "    ...\n",
     "\n",
-    "While the delimiters and quoting characters vary, the overall format is similar enough for easy parsing using the `csv` module."
+    "While the delimiters and quoting characters vary, the overall format is similar enough for easy parsing using the `csv` module.\n",
+    "\n",
+    "In the `data` folder, there is a `test.csv` file with the following contents:\n",
+    "\n",
+    "    name,column1,column2,column3\n",
+    "    abc,1.1,4.2,1.2\n",
+    "    def,2.1,1.4,5.2\n",
+    "    ghi,1.5,1.2,2.1\n",
+    "    jkl,1.8,1.1,4.2\n",
+    "    mno,9.4,6.6,6.2\n",
+    "    pqr,1.4,8.3,8.4\n",
+    "    \n",
+    "Let's see how to parse the file and read the first few lines."
    ]
   },
   {
@@ -481,14 +516,26 @@
    "source": [
     "import csv\n",
     "\n",
+    "# the relative path to the location of our csv file\n",
     "csv_file = 'data/test.csv'\n",
+    "\n",
+    "# a blank object that will store the parsed csv data\n",
     "test_csv = None\n",
     "\n",
-    "with open(csv_file, 'r') as csv_con:\n",
-    "    reader = csv.reader(csv_con, delimiter=',')\n",
-    "    test_csv = list(reader)\n",
+    "# Whenever you call the open() function in Python,\n",
+    "# you also need to call the close function. But since\n",
+    "# a lot of people forget, the general syntax people\n",
+    "# use is the \"with as\" structure.\n",
+    "# In the case below, the file contents that the\n",
+    "# open() function returns is stored in a temporary\n",
+    "# variable called csv_con.\n",
     "\n",
-    "print('first 3 rows:')\n",
+    "    # create a reader variable to read and parse csv_con\n",
+    "    \n",
+    "    # store the parsed data as a list in test_csv\n",
+    "    \n",
+    "\n",
+    "print('First 3 rows:')\n",
     "for row in range(3):\n",
     "    print(test_csv[row])"
    ]
@@ -503,24 +550,121 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`urllib2` is a very easy-to-use module to fetch URLs (Uniform Resource Locators). You can use this module to easily read and use web content in your code.\n",
+    "\n",
+    "Let's start by seeing what reading the Python.org homepage through urllib2 looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import urllib2\n",
+    "url = 'http://python.org'\n",
+    "response = urllib2.urlopen(url)\n",
+    "html = response.read()\n",
+    "\n",
+    "print html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This prints out the complete source HTML of the website. We have this data stored as a regular string in the `html` variable, and we can now do whatever we want with it."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "***\n",
-    "## Getting into Data Science using NumPy"
+    "## Build a Weather Reporting Program!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "***\n",
-    "## Using REST APIs (Weather Data)"
+    "Let's now use the `urllib2` module to build a small program that tells you the city and the current weather when you give it the zip code of a place.\n",
+    "\n",
+    "For the weather data, we will use the service OpenWeatherMap.org. Type the URL http://api.openweathermap.org/data/2.5/weather?zip=61820,us into the address bar in a new tab. The website shows text about the weather information in the area of zipcode 61820 (Champaign). Let's load this information through `urllib2`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# urllib2 is already imported\n",
+    "\n",
+    "url = 'http://api.openweathermap.org/data/2.5/weather?zip=61820,us'\n",
+    "response = \n",
+    "weather_html = \n",
+    "\n",
+    "print weather_html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The string that we have received is formatted in JSON, which is very similar to a Python dictionary. Let's parse this JSON data into a Python dictionary, and also pretty print it so that we can understand the structure of the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from json import JSONDecoder, dumps\n",
+    "\n",
+    "decoder = \n",
+    "weather_data = \n",
+    "pretty_weather_data = \n",
+    "\n",
+    "print(pretty_weather_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The information we want to build our program is the `name` field and the `temp` field which is inside the `main` sub-dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "city = \n",
+    "\n",
+    "temp_kelvin = \n",
+    "temp_fah = \n",
+    "\n",
+    "print(\"We are in {0} and it is {1} degrees outside!\".format(city, temp_fah))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's put all of this into a nice and easy to use function."
    ]
   },
   {
@@ -530,7 +674,371 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def tell_me_weather(zipcode):\n",
+    "    # import urllib2\n",
+    "    \n",
+    "    url = 'http://api.openweathermap.org/data/2.5/weather?zip={0},us'.format(zipcode)\n",
+    "    response = urllib2.urlopen(url)\n",
+    "    weather_html = response.read()\n",
+    "    \n",
+    "    # from json import JSONDecoder, dumps\n",
+    "\n",
+    "    decoder = JSONDecoder()\n",
+    "    weather_data = decoder.decode(weather_html)\n",
+    "    \n",
+    "    city = weather_data['name']\n",
+    "\n",
+    "    temp_kelvin = weather_data['main']['temp']\n",
+    "    temp_fah = 1.8 * (temp_kelvin - 273.15) + 32\n",
+    "\n",
+    "    print(\"You are in {0} and it is {1} degrees outside!\".format(city, temp_fah))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's use our new `tell_me_weather` function!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( tell_me_weather(60061) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Getting started with NumPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NumPy (or Numerical Python), is part of a great set of free scientific computing libraries called SciPy that provide mathematical and numerical functions that work very fast. NumPy is like MATLAB, and you can use it to create very powerful arrays and matrices, and it also has various kinds of optimization algorithms and linear algebra functions that are very useful for data science and analytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Let's import numpy to use some of its functions\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The central feature of NumPy is the array object class. Arrays are similar to lists in Python, except that every element of an array must be of the same type, typically a numeric type like `float` or `int`. Arrays make operations with large amounts of numeric data very fast and are generally much more efficient than lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_list = [1, 4, 5, 8]\n",
+    "a = np.array(my_list)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Array elements are accessed, sliced, and manipulated just like lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# accessing elements of the array using an index\n",
+    "# return the 4th element in the array (0-indexed!)\n",
+    "\n",
+    "\n",
+    "# accessing multiple continuous elements of the array, also called slicing\n",
+    "\n",
+    "\n",
+    "# modifying elements of the array\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the type of `a` is \"`ndarray`\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This means that numpy can handle multi-dimensional arrays. Let's create a 2-dimensional array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "b = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# access the element is the first row, second column\n",
+    "print(  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# slice the array and access only the 3rd column\n",
+    "print(  )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `shape` property returns the size of each dimension of the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( a.shape )\n",
+    "print( b.shape )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `in` statement can be used to check if values are present in the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( 3 in b )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( 7 in a )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arrays can be reshaped to different dimension sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.array(range(10), float)\n",
+    "print(a)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# reshape (10,) array to (5,2)\n",
+    "a = a.reshape((5, 2))\n",
+    "print(a)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can create special matrices in NumPy too! Remember that they are still referred to as arrays in NumPy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# create the identity 2-dimensional array of shape (4,4)\n",
+    "i = \n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# create a (3,3) array with all ones\n",
+    "o = \n",
+    "print(o)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can even do math operations on these arrays. All of the operations below happen element-wise. To do matrix multiplication and other matrix-specific math, we will have to use NumPy's linear algebra functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.array([1,2,3], float)\n",
+    "b = np.array([5,2,6], float)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( a + b )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( a - b )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( a * b )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( b / a )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print( b ** a)"
+   ]
   }
  ],
  "metadata": {
