Fixed spelling mistake.

--- a/adsa_workshop2_completed_code.ipynb
+++ b/adsa_workshop2_completed_code.ipynb
@@ -720,7 +720,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Getting stated NumPy"
+    "## Getting started with NumPy"
    ]
   },
   {
