Fixed a couple print statements.

--- a/adsa_workshop2_dive_into_python.ipynb
+++ b/adsa_workshop2_dive_into_python.ipynb
@@ -569,7 +569,7 @@
     "response = urllib2.urlopen(url)\n",
     "html = response.read()\n",
     "\n",
-    "print html"
+    "print(html)"
    ]
   },
   {
@@ -610,7 +610,7 @@
     "response = \n",
     "weather_html = \n",
     "\n",
-    "print weather_html"
+    "print(weather_html)"
    ]
   },
   {
