Changed html website because output was too big.

--- a/adsa_workshop2_completed_code.ipynb
+++ b/adsa_workshop2_completed_code.ipynb
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -2031,11 +2031,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "[1 4]\n",
+      "[5 4 5 8]\n"
+     ]
+    }
+   ],
    "source": [
     "# accessing elements of the array using an index\n",
     "# return the 4th element in the array (0-indexed!)\n",
@@ -2058,11 +2068,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(a))"
    ]
@@ -2076,11 +2094,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "print(b)"
@@ -2088,11 +2115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# access the element is the first row, second column\n",
     "print( b[0, 1] )"
@@ -2100,11 +2135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# slice the array and access only the 3rd column\n",
     "print( b[:, 2] )"
@@ -2119,11 +2162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4,)\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "print( a.shape )\n",
     "print( b.shape )"
@@ -2138,22 +2190,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print( 3 in b )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print( 7 in a )"
    ]
@@ -2167,11 +2235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9.]\n",
+      "(10,)\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array(range(10), float)\n",
     "print(a)\n",
@@ -2180,11 +2257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  1.]\n",
+      " [ 2.  3.]\n",
+      " [ 4.  5.]\n",
+      " [ 6.  7.]\n",
+      " [ 8.  9.]]\n",
+      "(5, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# reshape (10,) array to (5,2)\n",
     "a = a.reshape((5, 2))\n",
@@ -2201,11 +2291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.]\n",
+      " [ 0.  0.  1.  0.]\n",
+      " [ 0.  0.  0.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# create the identity 2-dimensional array of shape (4,4)\n",
     "i = np.identity(4)\n",
@@ -2214,11 +2315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  1.  1.]\n",
+      " [ 1.  1.  1.]\n",
+      " [ 1.  1.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# create a (3,3) array with all ones\n",
     "o = np.ones((3,3))\n",
@@ -2234,11 +2345,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.  2.  3.]\n",
+      "[ 5.  2.  6.]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1,2,3], float)\n",
     "b = np.array([5,2,6], float)\n",
@@ -2248,55 +2368,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6.  4.  9.]\n"
+     ]
+    }
+   ],
    "source": [
     "print( a + b )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4.  0. -3.]\n"
+     ]
+    }
+   ],
    "source": [
     "print( a - b )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  5.   4.  18.]\n"
+     ]
+    }
+   ],
    "source": [
     "print( a * b )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.  1.  2.]\n"
+     ]
+    }
+   ],
    "source": [
     "print( b / a )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   5.    4.  216.]\n"
+     ]
+    }
+   ],
    "source": [
     "print( b ** a)"
    ]
